--- a/src/components/ChatTitle/styles.scss
+++ b/src/components/ChatTitle/styles.scss
@@ -38,15 +38,24 @@
       display: flex;
       justify-content: center;
       align-items: center;
-
+      
       width: 50px;
       height: 50px;
       margin: 10px;
       padding: 10px;
-
+      
       border-radius: 4px;
       border: 1px solid #D0C6D8;
       color: #756E7E !important;
+      
+      .button{
+        background: #5C3B81 !important;
+      }
+
+
+      .style__button{
+        z-index: 99999999999999999999999999 !important;
+      }
     }
     
     .container__ChatTitle--button{
